test/gpu/native/studies/sort/scanTestMultiDim.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
scanTestMultiDim.chpl:5: error: gpuScan only supports 1D arrays
