test/gpu/native/studies/sort/scanTestMultiDim.chpl
use GPU;

on here.gpus[0]{
  var gpuArr : [12..14, 1..1000] int;
  gpuScan(gpuArr);
}
